<resources>
    <string name="app_name">零部件销售管理系统</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">主界面</string>
    <string name="title_activity_register">注册界面</string>
    <string name="title_activity_invent">库存管理</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--公共-->
    <string name="CreateBy">创建者：</string>
    <string name="CreateDateTime">创建时间：</string>
    <string name="UpdateBy">更新者：</string>
    <string name="UpdateDateTime">更新时间：</string>
    <string name="FirstPage">首页</string>
    <string name="PreviousPage">上一页</string>
    <string name="NextPage">下一页</string>
    <string name="LastPage">尾页</string>
    <string name="add_info">新增</string>
    <string name="modify_info">修改</string>
    <string name="del_info">删除</string>
    <string name="close_item">关闭</string>
    <string name="confirm_button">确定</string>
    <string name="cancel_button">取消</string>

    <!--用户管理-->
    <string name="title_activity_BasicSetting">基础配置</string>
    <string name="UserManagement">用户管理</string>
    <string name="AuthorityManagement">权限管理</string>
    <string name="ProductData">产品数据</string>
    <string name="UserRecord">系统用户日志</string>
    <string name="CompanyList">使用单位列表</string>
    <string name="UserList">系统用户列表</string>

    <string name="visitBy">访问者：</string>
    <string name="visitTime">登录时间：</string>
    <string name="visitEndTime">结束访问时间：</string>

    <string name="company">使用单位：</string>

    <string name="user">系统用户：</string>
    <string name="phone">手机号码：</string>

    <!--库存管理-->
    <string name="submit">提交</string>
    <!--使用单位列表-->
    <string name="UseDeptID">使用单位编码ID：</string>
    <!--密封件列表-->
    <string name="MFJID">密封件编码ID：</string>
    <string name="MFJName">名称：</string>
    <string name="MFJXing">型号：</string>
    <string name="MFJWaiJing">外径：</string>
    <string name="MFJGuang">光杆尺寸：</string>
    <string name="MFJYuJiGeng">使用预计更换周期：</string>
    <string name="MFJDes">描述：</string>
    <string name="MFJZaiTu">在途数：</string>
    <string name="MFJTuiHuo">退货数：</string>
    <string name="MFJZaiKu">在库数：</string>
    <string name="MFJChuKu">出库数：</string>
    <string name="MFJZaiYong">在用数：</string>
    <string name="MFJModelNo">样品或模具编号：</string>
    <string name="MFJModelName">样品或模具名称：</string>
    <string name="MFJModelDes">样品或模具描述：</string>
    <string name="MFJModelIfYou">样品或模具是否邮寄：</string>
    <string name="MFJModelDate">样品或模具邮寄日期：</string>
    <string name="MFJModelDan">样品或模具邮寄单号：</string>
    <string name="MFJModelIfShou">样品或模具是否收到：</string>
    <!--密封件订货付款列表-->
    <string name="title_activity_FinancialManagement">财务管理</string>
    <string name="PaymentManagement">付款管理</string>
    <string name="OrderPaymentList">订货付款列表</string>
    <string name="OrderPaymentCodeID">订货付款编码ID：</string>
    <string name="OrderCodeID">订货单编码ID：</string>
    <string name="UserCodeID">用户编码ID：</string>
    <string name="OrderPaymentDateTime">订货付款日期：</string>
    <string name="OrderPaymentAmount">订货付款金额：</string>
    <string name="OrderPaymentRemark">订货付款备注：</string>
    <string name="OrderPaymentOrder">订货付款次序：</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">用户登录</string>
    <string name="prompt_email">用户名或邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_to_sign_in">返回登录</string>
    <string name="action_register">用户注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="title_activity_UseManagement">使用管理</string>
    <string name="PatrolManagement">巡检管理</string>
    <string name="InManagement">入库管理</string>
    <string name="Add">添加</string>
    <string name="Del">删除</string>
    <string name="Set">修改</string>
    <string name="Manage">管理</string>
</resources>