<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".public_BasicSetting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <!--二级功能行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/UserManagementButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:background="#00000000"
            android:textColor="#888888"
            android:text="@string/UserManagement"/>
        <Button
            android:id="@+id/AuthorityManagementButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/AuthorityManagement"/>
        <Button
            android:id="@+id/ProductDataButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/ProductData"/>

    </LinearLayout>
    <!--三级功能行-->
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/orderpaymentlistbutton" />
            <Button
                android:id="@+id/OrderPaymentListButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserRecord"/>
            <Button
                android:id="@+id/CompanyListButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CompanyList"/>

            <Button
                android:id="@+id/UserListButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserList"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/itemAddFloatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/itemadd"/>
        </LinearLayout>
    </HorizontalScrollView>
    <!--item展示框-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="570dp"
        android:background="@color/purple_200"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/item_margin"
        android:layout_marginRight="@dimen/item_margin"
        android:orientation="vertical">

        <!--访问记录显示-->
    <!--第1个item-->
    <TableLayout
        android:id="@+id/item1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_top_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:background="@color/white">
        <TableRow
            android:layout_margin="@dimen/item_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visitBy"
                android:textColor="@color/black"
                android:textSize="@dimen/item_text_size" />
            <TextView
                android:id="@+id/visitBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/item_text_size"
                android:textColor="@color/black"/>
        </TableRow>
        <TableRow
            android:layout_margin="@dimen/item_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visitTime"
                android:textSize="@dimen/item_text_size"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/visitTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/item_text_size"
                android:textColor="@color/black"/>
        </TableRow>
        <TableRow
            android:layout_margin="@dimen/item_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visitEndTime"
                android:textSize="@dimen/item_text_size"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/visitEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/item_text_size"
                android:textColor="@color/black"/>
        </TableRow>
    </TableLayout>
    <!--第2个item-->
    <TableLayout
        android:id="@+id/item2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_top_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:background="@color/white">
        <TableRow
            android:layout_margin="@dimen/item_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visitBy"
                android:textColor="@color/black"
                android:textSize="@dimen/item_text_size" />
            <TextView
                android:id="@+id/visitBy1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/item_text_size"
                android:textColor="@color/black"/>
        </TableRow>
        <TableRow
            android:layout_margin="@dimen/item_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visitTime"
                android:textSize="@dimen/item_text_size"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/visitTime1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/item_text_size"
                android:textColor="@color/black"/>
        </TableRow>
        <TableRow
            android:layout_margin="@dimen/item_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visitEndTime"
                android:textSize="@dimen/item_text_size"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/visitEndTime1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/item_text_size"
                android:textColor="@color/black"/>
        </TableRow>
    </TableLayout>
    </LinearLayout>
    </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:id="@+id/Pages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 / 0"
                android:textSize="@dimen/item_detail_text_size"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/FirstPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Main_button_margin"
                android:text="@string/FirstPage"/>
            <Button
                android:id="@+id/PreviousPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Main_button_margin"
                android:text="@string/PreviousPage"/>
            <Button
                android:id="@+id/NextPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Main_button_margin"
                android:text="@string/NextPage"/>
            <Button
                android:id="@+id/LastPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Main_button_margin"
                android:text="@string/LastPage"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>