<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing">
        <TableLayout
            android:id="@+id/item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_top_margin"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:background="@color/white"
            android:layout_gravity="center_horizontal">

            <TableRow
                android:layout_margin="@dimen/Main_button_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/OrderCodeID"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"/>
                <Spinner
                    android:id="@+id/OrderCodeID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"
                    android:spinnerMode="dropdown"/>
            </TableRow>
            <TableRow
                android:layout_margin="@dimen/Main_button_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/UserCodeID"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/UserCodeID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"/>
            </TableRow>
            <TableRow
                android:layout_margin="@dimen/Main_button_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/OrderPaymentDateTime"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/OrderPaymentDateTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"/>
            </TableRow>
            <TableRow
                android:layout_margin="@dimen/Main_button_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/OrderPaymentAmount"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/OrderPaymentAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"/>
            </TableRow>
            <TableRow
                android:layout_margin="@dimen/Main_button_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/OrderPaymentRemark"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/OrderPaymentRemark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"/>
            </TableRow>
            <TableRow
                android:layout_margin="@dimen/Main_button_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/OrderPaymentOrder"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/OrderPaymentOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_button"
            android:layout_margin="@dimen/item_detail_button_size"/>
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:layout_margin="@dimen/item_detail_button_size"/>
    </LinearLayout>
</LinearLayout>