<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing">
        <TableLayout
            android:id="@+id/item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_top_margin"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:background="@color/white"
            android:layout_gravity="center_horizontal">
            <TableRow
                android:layout_margin="@dimen/Main_button_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CreateBy"
                    android:textColor="@color/black"
                    android:textSize="@dimen/item_detail_text_size" />
                <TextView
                    android:id="@+id/CreateBy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"/>
            </TableRow>
            <TableRow
                android:layout_margin="@dimen/Main_button_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CreateDateTime"
                    android:textColor="@color/black"
                    android:textSize="@dimen/item_detail_text_size" />
                <TextView
                    android:id="@+id/CreateDateTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"/>
            </TableRow>
            <TableRow
                android:layout_margin="@dimen/Main_button_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/UpdateBy"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/UpdateBy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"/>
            </TableRow>
            <TableRow
                android:layout_margin="@dimen/Main_button_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/UpdateDateTime"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/UpdateDateTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"/>
            </TableRow>
            <TableRow
                android:layout_margin="@dimen/Main_button_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MFJUseCodeID"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/MFJUseCodeID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"/>
            </TableRow>
            <TableRow
                android:layout_margin="@dimen/Main_button_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/UserCodeID"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/UserCodeID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"/>
            </TableRow>
            <TableRow
                android:layout_margin="@dimen/Main_button_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MFJID"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/MFJID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"/>
            </TableRow>
            <TableRow
                android:layout_margin="@dimen/Main_button_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MFJUseIfXianChang"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/MFJUseIfXianChang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/item_detail_text_size"
                    android:textColor="@color/black"/>
            </TableRow>

        </TableLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/modify_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_info"
            android:layout_margin="@dimen/item_detail_button_size"
            android:background="@color/blue_500"
            android:textColor="@color/white"
            android:textSize="@dimen/item_detail_button_text_size"/>
        <Button
            android:id="@+id/del_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/del_info"
            android:layout_margin="@dimen/item_detail_button_size"
            android:background="@color/blue_500"
            android:textColor="@color/white"
            android:textSize="@dimen/item_detail_button_text_size"/>
        <Button
            android:id="@+id/close_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close_item"
            android:layout_margin="@dimen/item_detail_button_size"
            android:background="@color/blue_500"
            android:textColor="@color/white"
            android:textSize="@dimen/item_detail_button_text_size"/>
    </LinearLayout>
</LinearLayout>